# adaptive-learning-agent

./: .gitignore  README.md  app.py  config.py  demo.py  pyproject.toml
models/: __init__.py  schemas.py
tools/: __init__.py  knowledge_manager.py  quiz_generator.py  resource_search.py
